tests/baselines/reference/parserForInStatement4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement4.ts (1 errors) ====
    for (var a = 1 in X) {
                      ~
!!! error TS2304: Cannot find name 'X'.
    }